<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/itemfood_tv_title_stt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.05"
        android:gravity="center"
        android:text="@string/title_stt"
        android:textColor="@color/color_item_food" />


    <TextView

        android:id="@+id/itemfood_tv_title_food_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:text="@string/title_food_name"
        android:textColor="@color/color_item_food" />


    <TextView
        android:id="@+id/itemfood_tv_title_type_food"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/title_type_food"
        android:textColor="@color/color_item_food" />


    <TextView
        android:id="@+id/itemfood_tv_title_con_lai"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.06"
        android:gravity="center"
        android:text="@string/title_soluong_con_lai"
        android:textColor="@color/color_item_food" />


    <ImageView
        android:id="@+id/itemfood_imv_option"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="15dp"
        android:src="@drawable/ic_more_option" />


</LinearLayout>
