<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="320dp"
              android:layout_height="wrap_content"
              android:background="@drawable/border_dialog_custome"
              android:orientation="vertical"
              android:paddingLeft="15dp"
              android:paddingRight="15dp"
              android:paddingTop="15dp"
              >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_5dp"
        android:gravity="center"
        android:text="@string/dialog_infor_order_title"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_infor_order_title_ho_ten"/>

        <TextView
            android:id="@+id/dialog_infor_order_tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_infor_order_title_user_phone"
            />

        <TextView
            android:id="@+id/dialog_infor_order_tv_user_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_infor_order_title_dia_diem"
            />

        <TextView
            android:id="@+id/dialog_infor_order_tv_user_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_infor_order_title_trang_thai"
            />

        <TextView
            android:id="@+id/dialog_infor_order_tv_status_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_infor_order_title_date_order"
            />

        <TextView
            android:id="@+id/dialog_infor_order_tv_date_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_5dp"
        android:text="@string/dialog_infor_order_title_list_order"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dialog_infor_order_recycleview_list_order"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="@dimen/size_5dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/size_10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_infor_order_title_total_price"
            />

        <TextView
            android:id="@+id/dialog_infor_order_tv_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/action_settings"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/size_10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_infor_order_title_combo_price"
            />

        <TextView
            android:id="@+id/dialog_infor_order_tv_combo_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/action_settings"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/size_10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_infor_order_title_price_need_pay"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/dialog_infor_order_tv_price_need_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/action_settings"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/size_10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_order"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_status_order_not_handl"
            android:text="@string/dialog_infor_order_title_cancel_order"
            android:textColor="@android:color/white"/>
        <Button
            android:layout_marginLeft="@dimen/size_10dp"
            android:id="@+id/btn_print"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_status_order_handled"
            android:text="@string/dialog_infor_order_title_print_order"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>