<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border_dialog_custome"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:gravity="center"
        android:text="@string/text_edit_food"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imv_edit_food_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fooditem" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_food_name"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edt_edit_food_name"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/action_settings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_food_type"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/spinner_edit_food_type"
                android:layout_width="match_parent"
                android:layout_height="46dp"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_food_total_quantity"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edt_edit_food_total_quantity"
                android:layout_width="70dp"
                android:layout_height="46dp"
                android:text="100" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_exit_dialog"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:text="@string/exit"
            android:textColor="@android:color/holo_red_dark" />

        <Button
            android:id="@+id/btn_ok_dialog"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:text="@string/ok"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>

</LinearLayout>