<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border_dialog_custome"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/note"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_content_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/note_when_reset_data"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/input_quantity"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:inputType="numberSigned"
                android:id="@+id/edt_input_total_quantity_for_list_food"
                android:paddingLeft="5dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:maxLength="4"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_exit_dialog_reset_data"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:text="@string/exit"
            android:textColor="@android:color/holo_red_dark"/>

        <Button
            android:id="@+id/btn_ok_dialog_reset_data"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:text="@string/ok"
            android:textColor="@android:color/holo_blue_dark"/>
    </LinearLayout>
</LinearLayout>


