<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        android:background="@drawable/border_dialog_custome"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="320dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tv_title_dialog"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/notification"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center_vertical"
                android:id="@+id/tv_content_dialog"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/activity_add_food_content_button_add_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_exit_dialog"
                android:textColor="@android:color/holo_red_dark"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/exit"
                android:layout_width="120dp"
                android:layout_height="46dp"/>

            <Button
                android:id="@+id/btn_ok_dialog"
                android:textColor="@android:color/holo_blue_dark"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/ok"
                android:layout_width="120dp"
                android:layout_height="46dp"/>
        </LinearLayout>
    </LinearLayout>


